--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        
+        <div class="board-container">
+            
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
