Display inputed players names

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
+        <div class="player-info-container">
+            <div class="player-1">
+                <h1 class="player-name"></h1>
+                <h1 class="player-symbol">x</h1>
+            </div>
+            <div class="player-2">
+                <h1 class="player-name"></h1>
+                <h1 class="player-symbol">o</h1>
+            </div>
+        </div>
         <div class="board-container">
             
         </div>
