Display results on page instead of in alerts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <div class="player-info-container">
-            <div class="player-1">
+            <div class="player-1 turn-green">
                 <h1 class="player-name"></h1>
                 <h1 class="player-symbol">x</h1>
             </div>
