--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
+        <button class="start-btn">Start</button>
+        <button class="restart-btn">Restart</button>
         <div class="player-info-container">
             <div class="player-1 turn-green">
                 <h1 class="player-name"></h1>
