Add restart button

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
     <body>
         <button class="start-btn">Start</button>
-        <button class="restart-btn">Restart</button>
+        <button class="restart-btn" onclick="window.location.reload()">Restart</button>
         <div class="player-info-container">
             <div class="player-1 turn-green">
                 <h1 class="player-name"></h1>
-                <h1 class="player-symbol">x</h1>
             </div>
             <div class="player-2">
                 <h1 class="player-name"></h1>
-                <h1 class="player-symbol">o</h1>
             </div>
         </div>
         <div class="board-container">
